src/main/java/com/example/management_system/controller/errors/InvalidUserException.java
package com.example.management_system.controller.errors;

public class InvalidUserException extends RuntimeException {
    public InvalidUserException(String message) {
        super(message);
    }
}
